methods.basics.Methods.scala.error
Compilation error:
Methods:8: error: '(' expected but identifier found.
  if compteur!=0{
     ^