methods.basics.Methods.scala.code
def goAndGet() {
  var compteur =0
  while (!estSurBiscuit){
    avance()
    compteur= compteur +1
  }
  prendBiscuit()
  if compteur!=0{
    recule()
    compteur= compteur -1
  }
  poseBiscuit()
}

for (i <- 1 to 7) {
    goAndGet();
    right();
    forward();
    left();
}